camarajs falta implementar

--- a/src/App.css
+++ b/src/App.css
@@ -961,6 +961,7 @@ h3 {
 }
 
 .divyapeadomedio{
+	text-align: center;
 	width: 70.14vw;
 	margin-left: 14.93vw;
 	border-top: 0.93vw solid transparent;
